Bugfix for overflow-x, some pages add a second scrollbar.

--- a/Source/Stylish/hide-horizontal-scrollbar.css
+++ b/Source/Stylish/hide-horizontal-scrollbar.css
@@ -4,7 +4,7 @@ Hide the horizontal scrollbar on all pages.
 */
 
 
-html {
+body {
     overflow-x: hidden;
 }
 
